--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "lottie-react-native": "^6.5.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-icons": "^5.0.1",
+    "react-native": "0.73.2",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-document-picker": "^9.1.0",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-share": "^10.0.2",
+    "react-native-share-sheet": "^0.1.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "sync-storage": "^0.4.2",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
